--- a/gtk2_ardour/ardour.menus.in
+++ b/gtk2_ardour/ardour.menus.in
@@ -13,6 +13,7 @@
       <menuitem action='SnapshotStay'/>
       <menuitem action='SnapshotSwitch'/>
 #endif
+      <menuitem action='MixerSnapshot'/>
       <menuitem action='SaveTemplate'/>
       <menuitem action='Archive'/>
       <separator/>
